<resources>
    <string name="app_name">Coin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currentFavCoin">요즘 어떤 코인에\n마음을 뺏겼나요?</string>
    <string name="selectionComplete">선택 완료</string>
    <string name="coinname">coinName</string>
    <string name="coinPriceUpDown">coinPriceUpDown</string>
    <string name="isLiked">좋아요 확인</string>
    <string name="fifteen_minutes_ago">15분전</string>
    <string name="thirty_minutes_ago">30분 전</string>
    <string name="forty_five_minutes_ago">45분 전</string>
</resources>